--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,8 @@
    
    <!-- sec2 -->
    <ul>
-    <li><a href="">
+    <li>
+      <a href="">
       <img src="./images/TaxiService4.jpg" alt="TaxiService" width="360" height="300">
       <h2>Taxi Service</h2>
       <p>Marketing</p>
@@ -108,14 +109,16 @@
        </a>
         </li>
         
-        <li><a href="">
+        <li>
+          <a href="">
           <img src="./images/OrganicFood8.jpg" alt="OrganicFood" width="360" height="300">
           <h2>Organic Food</h2>
           <p>Web Site</p>
        </a>
         </li>
         
-        <li><a href="">
+        <li>
+          <a href="">
           <img src="./images/FreshCoffee9.jpg" alt="FreshCoffee" width="360" height="300">
           <h2>Fresh Coffee</h2>
           <p>Web Site</p>
