--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link href="./index.html">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,7 +37,7 @@
   </ul>
  </address>
 </header>
-<main>
+<ul>
   <h1 hidden>features</h1>
   <ul>
     <li>
@@ -91,13 +92,14 @@
         <p>Design</p>
      </a>
       </li>
-    </ul>
+    
       <li><a href="">
           <img src="./images/OnlineCourses6.jpg" alt="OnlineCourses" width="360" height="300">
           <h2>Screen Illustrations</h2>
           <p>Design</p>
        </a>
         </li>
+      </ul>
          
         <!--Sec3-->
          <ul>
